# eVTOL-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: aircraft.h  aircraft_factory.h  charging_station.h
src/: aircraft.cpp  aircraft_factory.cpp  charger.cpp  charging_station.cpp  simulator.cpp
test/: test_aircraft.cpp
